--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines": {
+    "node": "20.10.0"
+  },
   "name": "airbnb-clone",
   "version": "1.0.0",
   "description": "",
@@ -13,6 +16,7 @@
     "body-parser": "^1.20.2",
     "cloudinary": "^1.21.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
